fix(step1/StreamStudy): 다양한 stream method 실습 - map, reduce, filter 실습 1